--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "nuxt-single-html": "0.1.0",
     "vue-tsc": "2.2.2"
   },
-  "packageManager": "pnpm@9.15.5"
+  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
 }
