--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxt/fonts": "0.11.1",
     "@nuxt/image": "1.10.0",
     "@nuxtjs/fontaine": "0.5.0",
+    "@nuxtjs/mdc": "0.16.1",
     "eslint": "9.23.0",
     "nuxt": "3.16.2",
     "nuxt-single-html": "0.2.0",
