--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
       "esbuild",
       "sharp",
       "unrs-resolver",
