--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -7,31 +7,45 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   build-image:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    name: Build Container Image
+    strategy:
+      matrix:
+        # Build and publish in parallel for linux/amd64 and linux/arm64
+        include:
+          - os: ubuntu-24.04
+            platform: linux/amd64
+          - os: ubuntu-24.04-arm
+            platform: linux/arm64
+    runs-on: ${{ matrix.os }}
     steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
           submodules: true
 
+      - name: Prepare
+        run: |
+          platform=${{ matrix.platform }}
+          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
+
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: |
-            ghcr.io/fivenet-app/infra
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern=v{{version}}
-            type=semver,pattern=v{{major}}.{{minor}}
-            type=semver,pattern=v{{major}}
-            type=sha
+          images: ghcr.io/fivenet-app/infra
 
       - name: Login to GHCR
         if: github.event_name != 'pull_request'
@@ -41,12 +55,88 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push to GHCR.io
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push by digest
+        id: build
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          tags: ghcr.io/fivenet-app/infra
+          outputs: type=image,push-by-digest=true,name-canonical=true,push=true
           build-args: |
             NUXT_UI_PRO_LICENSE=${{ secrets.NUXT_UI_PRO_LICENSE }}
+
+      - name: Export digest
+        run: |
+          mkdir -p ${{ runner.temp }}/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "${{ runner.temp }}/digests/${digest#sha256:}"
+
+      - name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ env.PLATFORM_PAIR }}
+          path: ${{ runner.temp }}/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  merge:
+    name: Merge and Push Image Digests
+    runs-on: ubuntu-latest
+    needs: [build-image]
+    outputs:
+      image_tag: ${{ steps.set-tag.outputs.image_tag }}
+    steps:
+      - name: Download digests
+        uses: actions/download-artifact@v5
+        with:
+          path: ${{ runner.temp }}/digests
+          pattern: digests-*
+          merge-multiple: true
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/fivenet-app/infra
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern=v{{version}}
+            type=semver,pattern=v{{major}}.{{minor}}
+            type=semver,pattern=v{{major}}
+            type=sha
+
+      - name: Create manifest list and push
+        working-directory: ${{ runner.temp }}/digests
+        run: |
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf 'ghcr.io/fivenet-app/infra@sha256:%s ' *)
+
+      - name: Pick the SHA tag as IMAGE_TAG
+        id: set-tag
+        # docker/metadata-action emits all tags as a comma-separated string
+        run: |
+          IFS= read -ra TAGS < <(echo "${{ steps.meta.outputs.tags }}" | grep "sha-")
+          SHA_TAG="${TAGS[-1]}"
+          SHA_TAG="${SHA_TAG##*:}"
+          echo "Picked SHA tag: $SHA_TAG"
+          echo "image_tag=$SHA_TAG" >> $GITHUB_OUTPUT
+
+      - name: Inspect image
+        run: |
+          echo "Image Tag: ${{ steps.meta.outputs.version }}"
+          docker buildx imagetools inspect ghcr.io/fivenet-app/infra:${{ steps.meta.outputs.version }}
